gcc/testsuite/g++.dg/pr53055.C
// PR c++/53055
// { dg-do compile }

struct A A :: * p ;
int i = p ->* p ; // { dg-error "" }
